# impl-opaque

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/egui-miniquad-demo/: Cargo.toml
examples/egui-miniquad-demo/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
lib/: Cargo.toml  README.md
lib/src/: lib.rs
macro/: Cargo.toml
macro/src/: attr.rs  expand.rs  gen.rs  lib.rs
macro/src/expand/: fn_field.rs  impl_field.rs  mod.rs
