[workspace]
members = ["macro", "lib", "examples/*"]
default-members = ["lib", "macro"]
resolver = "2"

[workspace.package]
description = "Macro for declaring complex struct and initializer"
version = "0.1.2"
edition = "2021"
authors = ["storycraft <storycraft@pancake.sh>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/storycraft/impl-opaque"
keywords = ["macro", "boilerplate"]

[workspace.dependencies]
impl-opaque = { version = "0.1.0", path = "./lib" }
impl-opaque-macro = { version = "0.1.0", path = "./macro" }
