[package]
name = "impl-opaque"
description = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
rust-version = { workspace = true }

[dependencies]
impl-opaque-macro = { workspace = true }
